@@ -569,8 +569,7 @@ sub _render_add_document
 	$inner_panel->appendChild( $session->make_text( " " ) );
 	$inner_panel->appendChild( $add_format_button );
 
-	my $script = $session->make_element( "script", type=>"text/javascript" );
-	$script->appendChild( $session->make_text( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" ));
+	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" );
 	$inner_panel->appendChild( $script);
 }
 
@@ -599,8 +598,7 @@ $panel->appendChild( $session->make_element( "div", style=>"height: 1em", class=
 	$inner_panel->appendChild( $session->make_text( " " ) );
 	$inner_panel->appendChild( $add_format_button );
 
-	my $script = $session->make_element( "script", type=>"text/javascript" );
-	$script->appendChild( $session->make_text( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" ));
+	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" );
 	$inner_panel->appendChild( $script);
 }
 
@@ -629,8 +627,7 @@ $panel->appendChild( $session->make_element( "div", style=>"height: 1em", class=
 	$inner_panel->appendChild( $session->make_text( " " ) );
 	$inner_panel->appendChild( $add_format_button );
 
-	my $script = $session->make_element( "script", type=>"text/javascript" );
-	$script->appendChild( $session->make_text( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" ));
+	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" );
 	$inner_panel->appendChild( $script);
 }
 
